# ops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: graph.py  guardrails.py  memory.py  prompts.py  runtime.py  state.py
app/api/: admin.py  auth.py  chat.py  deps.py  memory.py  terminal.py
app/db/: base.py  crypto.py  models.py
app/llm/: embeddings.py  registry.py  usage.py
app/tools/: clarify.py  mcp_manager.py  memory.py  ssh.py
app/web/: index.html
