[project]
name = "operator-agent"
version = "0.1.0"
description = "运维 Agent —— LangGraph 编排,多模型 + 多云 MCP + SSH,带审批门与审计"
requires-python = ">=3.12"
dependencies = [
    # --- Agent 编排 ---
    "langgraph==1.2.2",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    # --- 模型供应商 ---
    "langchain-openai>=0.2.0",     # OpenAI / Qwen / MiniMax / DeepSeek (OpenAI 兼容端点)
    "langchain-anthropic>=0.3.0",  # Anthropic
    # --- MCP 工具接入 ---
    "langchain-mcp-adapters>=0.1.0",
    # --- 服务器操作 ---
    "asyncssh>=2.14.0",
    # --- Web / API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    # --- 存储 / 配置 / 安全 ---
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "cryptography>=43.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
